--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<body>
 		<h1>Macaulay Dyson Conroy</h1>
-		<img src="niko_biakal_seal.webp" alt=Niko width=800>
+		<img src="Niko_Biakal_seal.webp" alt=Niko width=800>
 		<p> This is Niko, a biakal seal! I love these little guys, they prefer colder waters and Niko is from japan! He is very popular online as he is super friendly. He is trained to scrunch his face when the word "gua" is said. Baikal seals are earless seal from lake Baikal in Siberia. They are very closly related to Ladoga ringed seal, another cute and popular seal. </p>
 		<a href="https://en.wikipedia.org/wiki/Baikal_seal">https://en.wikipedia.org/wiki/Baikal_seal </a>
 
